# LestaGame

./: CMakeLists.txt  README.md  main.cpp
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glfw-3.4/: CMakeCache.txt
